Fixing z-index order

--- a/src/cdn/elements/badges.css
+++ b/src/cdn/elements/badges.css
@@ -5,7 +5,7 @@
   position: absolute;
   font-size: 10rem;
   text-transform: none;
-  z-index: 1;
+  z-index: 1!important;
   padding: 0 6rem;
   background-color: var(--error);
   color: var(--on-error);
