--- a/src/cdn/elements/layouts.css
+++ b/src/cdn/elements/layouts.css
@@ -64,7 +64,7 @@ footer.fixed {
   bottom: 0;
   left: 0;
   right: 0;
-  z-index: 10;
+  z-index: 10!important;
   background-color: inherit;
   padding: inherit;
   padding-left: 0;
