--- a/src/cdn/elements/tooltips.css
+++ b/src/cdn/elements/tooltips.css
@@ -7,7 +7,7 @@
   border-radius: 4rem;
   padding: 8rem;
   position: absolute;
-  z-index: 3;
+  z-index: 3!important;
   top: 0;
   left: 50%;
   bottom: auto;
